8270479: WebKit 612.1 build fails with Visual Studio 2017