modules/javafx.web/src/main/native/Source/WebCore/dom/Node.h
@@ -941,10 +941,14 @@ inline void Node::addInclusiveAncestorState(AncestorState state)
     }
 }
 
+// VS 2017 has buggy support for compile-time inline constants, so the
+// definitions are moved to Node.cpp
+#if !PLATFORM(JAVA)
 inline constexpr PartialOrdering PartialOrdering::less(Type::Less);
 inline constexpr PartialOrdering PartialOrdering::equivalent(Type::Equivalent);
 inline constexpr PartialOrdering PartialOrdering::greater(Type::Greater);
 inline constexpr PartialOrdering PartialOrdering::unordered(Type::Unordered);
+#endif
 
 constexpr bool is_eq(PartialOrdering ordering)
 {
